# stackJumpClone

./: .gitignore  README.md
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml
eclipse/stackJumpClone/: .cproject  .gitignore  .project
eclipse/stackJumpClone/src/: CMakeLists.txt  Scene.cpp
eclipse/stackJumpClone/src/NewGame/: NewGame.h
src/: .gitignore  CMakeLists.txt  Plank.cpp  Plank.h  Player.cpp  Player.h  Scene.h  game  main.cpp  settings.h  stack-jump.cpp
src/MainMenu/: MainMenu.cpp  MainMenu.h
src/Misc/: Common.h  Exceptions.h  TextBox.cpp  TextBox.h  Util.cpp  Util.h
src/NewGame/: NewGame.cpp
src/PauseMenu/: PauseMenu.h
src/engine/: EngineSettings.h
src/engine/GUI/: TextBox.cpp  TextBox.h
src/engine/Scene/: Scene.h
src/game/: GameSettings.h  main.cpp
src/game/MainMenu/: MainMenu.cpp  MainMenu.h
src/game/NewGame/: NewGame.cpp  NewGame.h
src/game/PauseMenu/: PauseMenu.cpp  PauseMenu.h
src/old/MainMenu/: MainMenu.cpp
src/old/engine/: CMakeLists.txt  EngineSettings.h
src/old/engine/GUI/: TextBox.cpp
src/old/engine/Scene/: Scene.cpp  Scene.h
src/old/engine/Util/: Log.h  Util.cpp
src/old/game/: CMakeLists.txt
src/old/game/PauseMenu/: PauseMenu.cpp  PauseMenu.h
